# geany-plugins

./: MAINTAINERS  Makefile.am  README  configure.ac
builder/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  regex-list.awk
builder/data/: regex-list.txt
builder/src/: Makefile.am  builder.c  builder.h  regex-list.c  regex-list.txt  utils.c  utils.h
